[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rvg_leidarstein_core"
version = "0.0.1"
authors = [
  { name="Luis Sanchez", email="author@example.com" },
]
description = "core functionalities for leidarstein dss"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
